<resources>
    <string name="app_name">AppChat</string>
    <string name="symbolimage">symbolImage</string>
    <string name="username">Name</string>
    <string name="signin">Sign In</string>
    <string name="regist">Register here</string>
    <string name="bannerregist">bannerRegist</string>
    <string name="example_mail_com">example@mail.com</string>
    <string name="passwordHint">*****</string>
    <string name="usernameHint">username</string>
    <string name="register">Register</string>
    <string name="register_here">Register Here</string>
    <string name="gender">Gender</string>
    <string name="man">Man</string>
    <string name="women">Women</string>
    <string name="others">Others</string>
    <string name="profile">Profile</string>
    <string name="image">Images</string>
    <string name="age">Ages</string>
    <string name="school_name">Shool Name</string>
    <string name="company_name">Company Name</string>
    <string name="favorite">Favorite</string>
    <string name="relationship_status">Relationship Status</string>
    <string name="address">Address</string>
    <string name="basicInfo">Basic Information</string>
    <string name="advanceInfo">Advanced Information</string>
    <string name="watch_avatar">Watch Avatar</string>
    <string name="take_newphoto">Take a new photo</string>
    <string name="choose_existed_photo">Choose an existed photo</string>
    <string name="avatar">Avatar</string>
    <string name="couldnt_get_camera_list">Couldnt get camera list</string>
    <string name="couldnt_dectect_a_camera">Couldnt detect a camera</string>
    <string name="fail_to_create_new_directory">Fail to create new directory</string>
</resources>
