<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:weightSum="10" android:background="@color/colorBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/banner_regist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/bannerregist" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/regist_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.4"
        android:orientation="vertical"
        android:background="@color/colorRegistContent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <EditText
                android:id="@+id/emailRegist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:hint="@string/example_mail_com"
                android:gravity="bottom"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <EditText
                android:id="@+id/usernameRegist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/usernameHint"
                android:gravity="bottom"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <EditText
                android:id="@+id/passwordRegist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/passwordHint"
                android:gravity="bottom"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/gender"
                android:id="@+id/gender"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                android:gravity="bottom"/>

            <RadioGroup
                android:id="@+id/gender_group"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="bottom|right"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gender_man"
                    android:text="@string/man"
                    android:textColor="@color/colorText"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gender_women"
                    android:text="@string/women"
                    android:textColor="@color/colorText"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gender_others"
                    android:text="@string/others"
                    android:textColor="@color/colorText"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.8"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/register"
                android:textAlignment="center"
                android:gravity="center"
                android:background="@drawable/button_enable_regist"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/loginBackButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/signin"
                android:textAlignment="center"
                android:gravity="center"
                android:background="@drawable/button_enable"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
