<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent" android:background="@color/colorBackground" android:weightSum="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_symbolImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/symbolImage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/symbolimage"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/top_margin_symbol_image"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_usename"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <EditText
                android:background="@color/colorUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/userName"
                android:layout_gravity="center"
                android:textColor="@color/colorText"
                android:hint="@string/username"
                android:gravity="bottom"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <EditText
                android:background="@color/colorUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password"
                android:layout_gravity="center"
                android:textColor="@color/colorText"
                android:hint="@string/passwordHint"
                android:gravity="bottom"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5">

        </LinearLayout>
        <LinearLayout
            android:id="@+id/buttonSignin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="vertical"
            android:weightSum="10">
            <Button
                android:id="@+id/signinButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/button_enable"
                android:text="@string/signin"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="vertical"
            android:weightSum="10">

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/button_enable_regist"
                android:text="@string/register_here"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>